--- a/PostAPI/package.json
+++ b/PostAPI/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
+    "prompt-sync": "^4.2.0",
     "uuidv4": "^6.2.13"
   }
 }
