--- a/UsersAPI/package.json
+++ b/UsersAPI/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "migration": "node db/migrations/index.js"
   },
   "keywords": [],
@@ -18,7 +18,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.0.2",
     "pg": "^8.11.3",
+    "prompt-sync": "^4.2.0",
     "uuidv4": "^6.2.13"
   }
 }
