--- a/blogpostclient/package.json
+++ b/blogpostclient/package.json
@@ -11,14 +11,16 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -42,5 +44,8 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.6"
+  },
+  "react-dotenv": {
+    "whitelist": ["REACT_APP_Users_API","REACT_APP_Posts_API"]
   }
 }
