--- a/blogpostclient/package.json
+++ b/blogpostclient/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
@@ -46,6 +47,9 @@
     "tailwindcss": "^3.3.6"
   },
   "react-dotenv": {
-    "whitelist": ["REACT_APP_Users_API","REACT_APP_Posts_API"]
+    "whitelist": [
+      "REACT_APP_Users_API",
+      "REACT_APP_Posts_API"
+    ]
   }
 }
