--- a/PostAPI/package.json
+++ b/PostAPI/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "migration": "node db/migrations/migration.js"
+    "migration": "node db/migrations/migration.js",
+    "alter-migration": "node db/migrations/alterMigration.js"
   },
   "author": "Sayantan Basu",
   "license": "ISC",
