--- a/blogpostclient/package.json
+++ b/blogpostclient/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-jwt": "^1.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
